# ai-trading-agent

./: .env.dev  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TELEGRAM_QUICK_START.md  alembic.ini  backup.ps1  docker-compose.yml  kill_processes.ps1  pyproject.toml  pytest.ini  quickstart.sh  run_tests.py  setup_telegram_webhook.py  setup_webhook_url.py  start_server.py  start_telegram_with_ngrok.bat  trade_template.json
.github/workflows/: ci.yml
agent/: infer.py
app/: __init__.py  deps.py  main.py
app/models/: __init__.py  account.py  base.py  event.py  limits.py  order.py  pnl.py  trade_log.py
app/routes/: __init__.py  broker.py  config.py  debug.py  debug_routes.py  export.py  health.py  metrics.py  model.py  orders.py  pnl.py  signal.py  telegram.py  tick.py  trade_logs.py
app/services/: __init__.py  metrics.py  queue.py  risk_guard.py  supervisor.py  trade_logger.py
app/services/execution/: __init__.py  base.py  ibkr.py  paper.py  tradovate.py
app/store/: __init__.py  db.py  repositories.py
config/: config.yaml
config/providers/: __init__.py  cme.py
data/: sample_btc_data.csv
data/processed/: trades_dataset.parquet
data/raw/: nq_1m.csv
docs/: RFCs.md  TELEGRAM_SETUP.md
engines/backtest/: __init__.py  run.py
engines/supervised/: build_dataset.py  train.py
examples/: api_examples.sh  strategy_example.py
mlruns/0/: meta.yaml
models/: clf.joblib  metrics.json
ops/: __init__.py
ops/migrations/: env.py  get_revision.py
ops/mlflow/: __init__.py
reports/audit/: audit_20251004-233321.md  audit_20251004-233354.md  audit_20251004-234525.md  audit_20251005-044335.md
reports/backtests/: backtest_20251003_183638.html  backtest_20251003_183725.html
scripts/: README.md  audit_nq_dataset.py  backfill_nq_from_csv.py  cleanup_ports.ps1  cleanup_ports.sh  create_jwt_token.py  direct_trade_entry.py  open_trading_hours.ps1  open_trading_hours.sh  submit_trade.sh  test_paper_order.py  test_paper_order.sh  test_telegram_webhook.py  test_telegram_webhook_setup.sh  test_trade_logs.py  test_trade_logs.sh  trade_cli.py
telegram/: README.md  TELEGRAM_SETUP_COMPLETE.md  start_telegram_with_ngrok.bat  telegram_requirements.txt  telegram_webhook_server.py
tests/: test_api.py  test_config.py  test_paper_broker.py  test_risk.py
ui/: __init__.py  dashboard.py
(+13 files in other folders)
